--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@ EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.)
             </nav>
         </div>
         
-        <div class="mainbox">
+        <div class="mainbox" style="overflow:auto;">
             <h2>About this project:</h2>
             <p><span id="logo">Easy Tree</span> is an interactive 
             program for creating, editing, and saving tree structures.</p>
